--- a/Frontpage/style/reset.css
+++ b/Frontpage/style/reset.css
@@ -6,10 +6,14 @@ body,ul,ol,li,p,h1,h2,h3,h4,h5,h6,from,fieldset,table,td,img,div,dl,dt
 body{font-size:12px;}
 img{border:none;}
 li{list-style:none;}
-input,select,textarea{outline:none;}
+input,select,textarea{outline:none;border:none;background:none;}
 textarea{resize:none;}
 a{text-decoration:none;color:#656565;}
+input
+
 /*清浮动*/
 .clearfix:after{content:"";display:block;clear:both;}
 .clearfix{zoom:1;}
+.fl{float:left;}
+.fr{float:right;}
 
