--- a/Frontpage/style/main.css
+++ b/Frontpage/style/main.css
@@ -1,26 +1,158 @@
 @charset "utf-8";
 /* CSS Document */
 /*公用*/
-.comWidth{width:1000px;margin-left:auto;margin-right:auto;}
-.leftArea{float:left;}
-.rightArea{float:right;}
+.comWidth{
+	width:1000px;
+	margin:auto;
+	}
+.leftArea{
+	float:left;
+	}
+.rightArea{
+	float:right;
+	}
 
 /*topBar*/
-.topBar{height:31px;background-color:#F7F7F7;line-height:31px;}
-.collection{background:url(../images/icon/collection.jpg) left center no-repeat;padding-left:19px;font-weight:bold;}
-.topBar a:hover{color:red;}
+.topBar{
+	height:31px;
+	background-color:#F7F7F7;
+	line-height:31px;
+	}
+.collection{
+	background:url(../images/icon/collection.jpg) left center no-repeat;
+	padding-left:19px;
+	font-weight:bold;
+	}
+.topBar a:hover{
+	color:red;
+	}
 
 /*logo*/
-.logoBar{height:85px;background-color:#1D7AD9;}
-.logo{padding-left:41px; padding-right:13px;}
+.logoBar{
+	height:85px;
+	background-color:#1D7AD9;
+	}
+.logo{
+	padding-left:41px; 
+	padding-top:13px;
+	}
 
-/*search*/
-.search_box{width:430px; padding-top:23px; padding-left:185px;}
-.search_text{width:350px;height:35px;line-height:35px\9/*css hack 9代表所有的IE浏览器*/;padding:0px 5px; background-color:#FFF;}
+/*搜索栏*/
+.search_box{
+	width:430px; 
+	height:35px; 
+	padding-top:23px; 
+	padding-left:185px;
+	}
+.search_text{
+	width:350px;
+	height:35px;
+	padding:0px 5px; 
+	background-color:#FFF;
+	}
 /*.search_text{width:350px;height:14px;line-height:14px;padding:11px 5px 10px; background-color:#FFF;}*/
-.search_btn{width:70px;height:35px;font-size:14px;font-family:"Microsoft YaHei","微软雅黑"; background-color:#FF8C00;color:#FFF;}
-/*shopCar*/
-.shopCar{ width:145px; height:35px; background-color:#FF8C00; margin-top:23px; font:14px/35px "Microsoft YaHei","微软雅黑";color:#FFF; margin-right:59px;}
-.shopText{ height:100%; width:87px; border-right:#E27A00 solid 1px; background:url(../images/icon/shopCar.jpg) 10px center no-repeat; text-indent:40px;}
-.shopNum{ width:27px; height:35px; border-left:#FF9C01 solid 1px; background:url(../images/icon/angle.jpg) 33px center no-repeat; text-align:right; padding-right:29px;}
-
+.search_btn{
+	width:70px;
+	height:35px;
+	font-size:14px;
+	font-family:"Microsoft YaHei","微软雅黑"; 
+	background-color:#FF8C00;
+	color:#FFF;}
+/*购物车*/
+.shopCar{ 
+	width:145px; 
+	height:35px; 
+	background-color:#FF8C00;
+	margin-top:23px; 
+	line-height:35px;
+	font-size:14px;
+	font-family:"Microsoft YaHei","微软雅黑";
+	color:#FFF;
+	margin-right:59px;
+	  }
+.shopText{ 
+	width:87px; 
+	border-right:#E27A00 solid 1px; 
+	background:url(../images/icon/shopCar.jpg) 10px center no-repeat; 
+	text-indent:40px;
+	}
+.shopNum{ 
+	width:27px; 
+	height:35px;
+	border-left:#FF9C01 solid 1px; 
+	background:url(../images/icon/angle.jpg) 33px center no-repeat; 
+	text-align:right; 
+	padding-right:29px;
+	}
+/*导航栏*/
+.navBox{ 
+	height:35px; 
+	background-color:#1369C0; 
+	color:#FFF;
+	}
+.shopClass{ 
+	width:190px; 
+	position:relative; 
+	}
+.shopClass h3{
+	line-height:35px; 
+	text-align:center;
+	}
+.shopClass i{ 
+	width:11px; 
+	height:7px; 
+	overflow:hidden; 
+	background:url(../images/icon/down.jpg) left center no-repeat; 
+	display:inline-block; 
+	margin-left:11px;
+	}
+.nav, .shopClass{ 
+	font-family:"Microsoft YaHei","微软雅黑";
+	}
+.nav{ 
+	line-height:35px;
+	}
+.nav li{ 
+	float:left;
+	}
+.nav a{ 
+	height:35px; 
+	display:inline-block; 
+	padding:0 35px; /*不一样*/
+	color:#FFF;
+	}
+.nav .active{ 
+	background-color:#4593FD;
+	}
+/*商品弹出列表*/
+.shopClass_show{ 
+	background-color:#4593FD; 
+	position:absolute; 
+	left:0px; 
+	top:35px; 
+	width:100%;
+	}
+.shopClass_item{ 
+	padding:14px 10px; 
+	border-bottom:#3487F2 solid 1px; 
+	border-top:#5AA1FE solid 1px;
+	}
+.shopClass_item dt{ 
+	height:22px; 
+	background:url(../images/icon/shop_cl.jpg) right center no-repeat;
+	}
+.shopClass_item .b{ 
+	font:14px/1 "Microsoft YaHei","微软雅黑";
+	}
+.shopClass_item a{ 
+	color:#FFF;
+	}
+.shopClass_item .aLink{ 
+	width:48px; 
+	height:20px; 
+	background:url(../images/icon/aLink_bg.png) left center no-repeat; 
+	display:inline-block; 
+	text-align:center; 
+	line-height:20px; 
+	text-decoration:underline;
+	}
